# ai-crm

./: .cursorignore  .dockerignore  .env.example  .gitignore  docker-compose-dev.yaml  docker-compose.yaml  poetry.toml  pyproject.toml  readme.md  todo.txt
.cursor/rules/: architecture.mdc
ai_crm/api/: __init__.py  logger.py  server.py
ai_crm/api/handlers/: __init__.py
ai_crm/api/handlers/auth/: __init__.py  auth_login_v1.py  auth_me_v1.py  auth_refresh_v1.py  auth_register_v1.py
ai_crm/api/handlers/gifts/: __init__.py  gifts_create_v1.py  gifts_delete_v1.py  gifts_get_by_id_v1.py  gifts_get_v1.py  gifts_update_v1.py
ai_crm/api/handlers/resumes/: __init__.py  resumes_ai_personalize_v1.py  resumes_delete_v1.py  resumes_download_v1.py  resumes_list_v1.py  resumes_upload_v1.py
ai_crm/api/handlers/users/: __init__.py  users_create_v1.py  users_get_v1.py
ai_crm/api/middlewares/: handle_http_exceptions.py  jwt_auth.py  metrics.py  prometheus.py  token_based_verification.py
ai_crm/internal/repository/postgresql/: collect_response.py  gifts.py  resumes.py  users.py
ai_crm/internal/services/: ai_resume_parser.py  auth.py  gifts.py  resumes.py  users.py
ai_crm/internal/services/resumes/: ai_resume_parser.py  ai_resume_personalizer.py  ai_resume_service.py  resume_generator.py  resumes.py
ai_crm/pkg/clients/openai/: client.py
ai_crm/pkg/configuration/: context_vars.py  settings.py
ai_crm/pkg/connectors/: postgresql.py  psql.py
ai_crm/pkg/connectors/postgresql/: host.py  psql.py  resource.py
ai_crm/pkg/connectors/storage/: base.py  factory.py  local.py  s3.py
ai_crm/pkg/context/: __init__.py  web_context.py
ai_crm/pkg/logger/: logger.py
ai_crm/pkg/models/: logger.py
ai_crm/pkg/models/ai_crm/: ai_resume.py  auth.py  gift.py  parsed_resume.py  resume.py  user.py
ai_crm/pkg/models/base/: enum.py  exception.py  (+2 more)
ai_crm/pkg/utils/: jwt.py  password.py
ci/: Dockerfile  api_proxy.conf  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  nginx.conf
migrations/: 0001_initial.sql  0002_create_resumes_table.sql  0003_add_media_type_to_resumes.sql
rfc/: ai-crm-analyse.csv  ai-crm-techno.txt  nginx-yandex-cloud-setup.md  todo.txt
scripts/: migrate.sh
(+9 files in other folders)
